# old_index_removal_tool

./: README.md  pyproject.toml
src/: .env.bk  main.py
tests/: test.py
