[tool.poetry]
name = "auto-remove-index"
version = "0.1.0"
description = ""
authors = ["sattosan <sato.yuya1211@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.17.0"
python-decouple = "^3.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
autopep8 = "^2.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
